--- a/src/components/Counter/counter.module.css
+++ b/src/components/Counter/counter.module.css
@@ -1,3 +1,12 @@
 .counter {
   /* TODO */
 }
+.counter > button {
+  width: 30px;
+  height: 25px;
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+  border: 0px transparent;
+  background-color: white;
+}
